lab1/Test/L1-A-10-46.output
Error Type A at Line 6
Error Type A at Line 19
Error Type A at Line 35
Error Type B at Line 43
Error Type B at Line 47
Error Type B at Line 50
Error Type A at Line 51
